--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@deriv-com/ui": "1.29.9",
+    "@deriv/quill-icons": "1.23.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -23,6 +25,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "prettier": "3.3.3",
+    "sass": "1.77.8"
   }
 }
