--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@deriv-com/ui": "1.29.9",
-    "@deriv/quill-icons": "1.23.5"
+    "@deriv/quill-icons": "1.23.5",
+    "react-icons": "5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
