--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@deriv-com/ui": "1.29.9",
     "@deriv/quill-icons": "1.23.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "5.2.1"
   },
   "devDependencies": {
@@ -22,12 +22,15 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4",
+    "postcss": "^8.4.41",
     "prettier": "3.3.3",
-    "sass": "1.77.8"
+    "sass": "1.77.8",
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.4"
   }
 }
